--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>listing files</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>File Detail</title>
 </head>
 <body>
-    
+  <h1>File Detail</h1>
+      <h2>File Name <%= filename %></h2>
+      <h2>File Content</h2>
+      <pre> <%= content %> </pre> 
 </body>
 </html>
