write-user-functions

--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,8 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: rgb(254, 255, 255);
@@ -40,6 +42,7 @@ button {
     border: none;
     border-radius: 3px;
     cursor: pointer;
+  
   }
   
   button:hover {
