--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -7,9 +7,9 @@
     <title>File Detail</title>
 </head>
 <body>
-  <h1>File Detail</h1>
-      <h2>File Name <%= filename %></h2>
-      <h2>File Content</h2>
-      <pre> <%= content %> </pre> 
+  <h1 class="filecontent">File Detail</h1>
+      <h2 class="filecontent">File Name <%= filename %></h2>
+      <h2 class="filecontent">File Content</h2>
+      <pre class="filecontent"> <%= content %> </pre> 
 </body>
 </html>
